--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Compact%20Help%20Command"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Compact%20Help%20Command"
 logoFile="icon.png"
 
 [[mods]]
 modId="compacthelpcommand"
-version="2.4"
+version="2.5"
 displayName="Compact Help Command"
-displayURL="https://curseforge.com/minecraft/mc-mods/compact-help-command"
+displayURL="https://serilum.com/mod/compact-help-command"
 authors="Rick South"
 description='''Modifies the standard /help command to be colourful and have multiple pages.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.compacthelpcommand]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.13,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.compacthelpcommand]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.20.4]"
     ordering="NONE"
