--- a/Common/src/main/resources/META-INF/neoforge.mods.toml
+++ b/Common/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="compacthelpcommand"
-version="2.6"
+version="2.7"
 displayName="Compact Help Command"
 displayURL="https://serilum.com/mod/compact-help-command"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Modifies the standard /help command to be colourful and have mult
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Jack, Jeremy Langford, Michael W. S., pepe1191, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.compacthelpcommand]]
     modId="collective"
     type="required"
-    versionRange="[7.55,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
